# franco21

./: .gitignore  Cargo.toml  subtrees
.github/workflows/: rust.yml
common-rs/src/: coro.rs  easing.rs  lib.rs  math.rs
common-rs/src/math/: aabb.rs  quaternion.rs
franco/: Cargo.toml
franco/assets/: main.toy
franco/src/: controller.rs  debug.rs  main.rs  model.rs  prelude.rs  shaders.rs  view.rs
franco/src/controller/: camera.rs  debug.rs  friend.rs  global.rs  player.rs  ui.rs
franco/src/model/: camera.rs  global.rs  player.rs  resources.rs  ui.rs  world.rs
franco/src/shaders/: 3d.common.glsl  boat.vert.glsl  color_3d.vert.glsl  color_3d_instanced.vert.glsl  final_composite.frag.glsl  flat_color.frag.glsl  flat_color_fog.frag.glsl  fullscreen_quad.vert.glsl  water.common.glsl  water.frag.glsl  (+2 more)
plugin/: __init__.py  anim.py  exporter.py  mesh.py  serializer.py  util.py
resources/: main.blend
src/: audio.rs  coro.rs  gfx.rs  gl.rs  importer.rs  input.rs  lib.rs  math.rs  ordified.rs  perf.rs  prelude.rs  types.rs  window.rs
src/audio/: buffer.rs  mixer.rs  stream.rs  system.rs
src/gfx/: buffer.rs  capabilities.rs  context.rs  framebuffer.rs  mesh.rs  resources.rs  texture.rs  vao.rs  vertex.rs
src/gl/: buffer.rs  shader.rs  texture.rs  vao.rs  vertex.rs
src/input/: action.rs  context.rs  context_macro.rs  system.rs
src/math/: color.rs  matrix.rs  mod.rs  plane.rs  quaternion.rs  vector.rs
toy-rs/plugin/: __init__.py  entity.py
toy-rs/src/: lib.rs  types.rs
toybox-rs/: build.rs
toybox-rs/src/: gfx.rs  input.rs  lib.rs  window.rs
(+44 files in other folders)
