[package]
name = "toybox"
version = "0.1.0"
authors = ["Patrick Monaghan <0x5f.manpat@gmail.com>"]
edition = "2018"

[dependencies]
sdl2 = { version = ">=0.33", features = ["bundled", "static-link"] }
common = { git = "https://github.com/manpat/common-rs.git" }
toy = { git = "https://github.com/manpat/toy-rs.git" }
lewton = "0.10.*"
thiserror = "1.0"
bitflags = "1.2.*"
slotmap = "1.0.*"

[build-dependencies]
gl_generator = "0.14.0"
