[workspace]

members = [
	"franco",
	"common-rs",
	"toybox-rs",
]


[patch."https://github.com/manpat/toybox-rs.git"]
toybox = { path = "toybox-rs" }

[patch."https://github.com/manpat/common-rs.git"]
common = { path = "common-rs" }

[patch."https://github.com/manpat/toy-rs.git"]
toy = { path = "toy-rs" }


